--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
-    "vue3-carousel": "^0.3.1"
+    "vue3-carousel": "^0.3.1",
+    "vue3-smooth-scroll": "^0.8.1"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
